Speculative fix for horizontal scroll bar

--- a/Static/public/css/app.css
+++ b/Static/public/css/app.css
@@ -16,7 +16,9 @@ body {
   color: #222;
   line-height: 150%;
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow: hidden;
+}
 
 a {
   color: #000;
